--- a/app1/package.json
+++ b/app1/package.json
@@ -9,12 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.25",
+    "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.0"
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.1.0",
+    "react-native-screens": "^4.5.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
