--- a/app2/package.json
+++ b/app2/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.25",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "^16.0.4",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.20",
